# HarpoChat_Serveur

./: .gitignore  Cargo.toml  Dockerfile  README.md
crates/harpo-crypto/: Cargo.toml
crates/harpo-crypto/src/: lib.rs
crates/harpo-proto/: Cargo.toml
crates/harpo-proto/src/: lib.rs
crates/harpo-server/: Cargo.toml
crates/harpo-server/migrations/: 0001_pending_envelopes.sql
crates/harpo-server/src/: lib.rs  mailbox.rs  main.rs  rate_limit.rs  session.rs  ws.rs
crates/harpo-server/tests/: integration_ws.rs
