[workspace]
resolver = "2"
members = [
    "crates/harpo-server",
    "crates/harpo-proto",
    "crates/harpo-crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["HarpoChat contributors"]
repository = "https://github.com/Cronix2/HarpoChat"

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# web / websocket
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }
hyper = "1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros", "chrono"] }

# crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
subtle = "2.6"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

# testing
tokio-tungstenite = "0.23"
