[package]
name = "harpo-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol types for HarpoChat (JSON-framed WebSocket messages)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
