[package]
name = "harpo-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HarpoChat relay server — WebSocket mailbox that never sees plaintext."
default-run = "harpo-server"

[[bin]]
name = "harpo-server"
path = "src/main.rs"

[lib]
name = "harpo_server"
path = "src/lib.rs"

[dependencies]
harpo-proto = { path = "../harpo-proto" }
harpo-crypto = { path = "../harpo-crypto" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
